@@ -1,3 +1,9 @@
+2008-02-23  Zach Beane  <xach@xach.com>
+
+	Add customization variable for the `slime-connect' port.
+
+	* slime.el (slime-port): New variable.
+
 2008-02-22  Mark Evenson <mark.evenson@gmx.at>
 
 	* swank-abcl.lisp (getpid): Return '0' in case of error.
